syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.skywalking.apm.collector.remote.grpc.proto";

service RemoteCommonService {
    rpc call (stream RemoteMessage) returns (Empty) {
    }
}

message RemoteMessage {
    string workerRole = 1;
    RemoteData remoteData = 2;
}

message RemoteData {
    int32 stringCapacity = 1;
    int32 longCapacity = 2;
    int32 doubleCapacity = 3;
    int32 integerCapacity = 4;
    int32 byteCapacity = 5;
    int32 booleanCapacity = 6;
    repeated string dataStrings = 7;
    repeated int64 dataLongs = 8;
    repeated double dataDoubles = 9;
    repeated int32 dataIntegers = 10;
    repeated bytes dataBytes = 11;
    repeated bool dataBooleans = 12;
}

message Empty {
}